# xum1541

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  install.sh
docs/: REMOTE.md  SERIAL.md
examples/: basic.rs  drivecheck.rs  listen.rs  readme.rs  remote.rs  remoteclient.rs  remoteserver.rs  serial.rs  talk.rs
examples/common/: mod.rs
rules/: 41-fs1541-xum1541.rules  remote-xum1541.service
scripts/: install.sh  remote-setup.sh  serial.py
src/: bus.rs  buscmd.rs  commands.rs  constants.rs  device.rs  error.rs  lib.rs  transfer.rs
src/bus/: builder.rs  buscmd.rs  cmd.rs  mod.rs  remoteusb.rs  usb.rs
src/device/: mod.rs  remoteusb.rs  usb.rs
