[package]
name = "xum1541"
version = "0.1.0"
edition = "2021"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "Rust driver to access Commodore disk drives using XUM1541 USB device"
repository  = "https://github.com/piersfinlayson/xum1541"
license = "GPL-3.0"
documentation = "https://docs.rs/rxum1541"
keywords = ["commodore", "disk", "1541", "opencbm", "retro"]
categories = [
    "hardware-support",
    "asynchronous",
    "emulators",
    "development-tools",
    "filesystem"
]

[lib]
name = "xum1541"
path = "src/lib.rs"

[dependencies]
rusb = "0.9"
thiserror = "2.0"
log = "0.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11"  # Required by examples