[package]
name = "xum1541"
version = "0.3.0"
edition = "2021"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "Rust driver to access Commodore disk drives using XUM1541 USB device"
repository  = "https://github.com/piersfinlayson/xum1541"
license = "GPL-3.0"
documentation = "https://docs.rs/xum1541"
keywords = ["commodore", "disk", "1541", "opencbm", "retro"]
categories = [
    "hardware-support",
    "asynchronous",
    "emulators",
    "development-tools",
    "filesystem"
]

[lib]
name = "xum1541"
path = "src/lib.rs"

[dependencies]
rusb = "0.9"  # Used for USB communication
thiserror = "2.0"  # Used for simplifying error handling
log = "0.4"  # Used for logging
libc = "0.2"  # Used for access to errnos
serde = { version = "1.0", features = ["derive"] }  # Used for Error serialization support
failsafe = "1.3" # Used for wrapping Device to handle failures

[dev-dependencies]
env_logger = "0.11"  # Required by examples